--- a/src/app/components/lesson-create/lesson-create.component.html
+++ b/src/app/components/lesson-create/lesson-create.component.html
@@ -3,21 +3,49 @@
     class="flex w-full max-w-sm flex-col gap-8 rounded-xl bg-white p-8 shadow-2xl"
   >
     <h3 class="text-center text-2xl font-bold">เพิ่มบทเรียน</h3>
-    <div class="flex flex-col gap-8">
+    <form [formGroup]="form" (ngSubmit)="create()" class="flex flex-col gap-8">
       <div class="flex flex-col gap-4">
         <div class="flex flex-col gap-1">
-          <label class="text-sm font-semibold">หมุดบทเรียน</label>
-          <input type="text" placeholder="ระบุหมุดบทเรียน" class="rounded border-stone-300" />
+          <label class="text-sm font-semibold" for="lessonSlug"
+            >หมุดบทเรียน</label
+          >
+          <input
+            id="lessonSlug"
+            formControlName="slug"
+            type="text"
+            placeholder="ระบุหมุดบทเรียน"
+            class="rounded border-stone-300"
+          />
         </div>
         <div class="flex flex-col gap-1">
-          <label class="text-sm font-semibold">ชื่อบทเรียน</label>
-          <input type="text" placeholder="ระบุชื่อบทเรียน" class="rounded border-stone-300" />
+          <label class="text-sm font-semibold" for="category">หมวดหมู่</label>
+          <select class="rounded border-stone-300">
+            @for (category of categoryStore.categories(); track $index) {
+              <option [value]="category.id">{{ category.name }}</option>
+            }
+          </select>
+        </div>
+        <div class="flex flex-col gap-1">
+          <label class="text-sm font-semibold" for="lessonTitle"
+            >ชื่อบทเรียน</label
+          >
+          <input
+            id="lessonTitle"
+            formControlName="title"
+            type="text"
+            placeholder="ระบุชื่อบทเรียน"
+            class="rounded border-stone-300"
+          />
         </div>
       </div>
       <div class="grid grid-cols-2 place-items-center">
-        <button class="font-semibold text-green-600">สร้าง</button>
-        <button (click)="closed.emit()" class="font-semibold">ยกเลิก</button>
+        <button type="submit" class="font-semibold text-green-600">
+          สร้าง
+        </button>
+        <button type="button" (click)="closed.emit()" class="font-semibold">
+          ยกเลิก
+        </button>
       </div>
-    </div>
+    </form>
   </div>
 </app-overlay>
