--- a/src/app/components/category-create/category-create.component.html
+++ b/src/app/components/category-create/category-create.component.html
@@ -3,21 +3,41 @@
     class="flex w-full max-w-sm flex-col gap-8 rounded-xl bg-white p-8 shadow-2xl"
   >
     <h3 class="text-center text-2xl font-bold">เพิ่มหมวดหมู่</h3>
-    <div class="flex flex-col gap-8">
+    <form [formGroup]="form" (ngSubmit)="create()" class="flex flex-col gap-8">
       <div class="flex flex-col gap-4">
         <div class="flex flex-col gap-1">
-          <label class="text-sm font-semibold">หมุดหมวดหมู่</label>
-          <input type="text" placeholder="ระบุหมุดหมวดหมู่" class="rounded border-stone-300" />
+          <label class="text-sm font-semibold" for="categorySlug"
+            >หมุดหมวดหมู่</label
+          >
+          <input
+            id="categorySlug"
+            formControlName="slug"
+            type="text"
+            placeholder="ระบุหมุดหมวดหมู่"
+            class="rounded border-stone-300"
+          />
         </div>
         <div class="flex flex-col gap-1">
-          <label class="text-sm font-semibold">ชื่อหมวดหมู่</label>
-          <input type="text" placeholder="ระบุชื่อหมวดหมู่" class="rounded border-stone-300" />
+          <label class="text-sm font-semibold" for="categoryName"
+            >ชื่อหมวดหมู่</label
+          >
+          <input
+            id="categoryName"
+            formControlName="name"
+            type="text"
+            placeholder="ระบุชื่อหมวดหมู่"
+            class="rounded border-stone-300"
+          />
         </div>
       </div>
       <div class="grid grid-cols-2 place-items-center">
-        <button class="font-semibold text-green-600">สร้าง</button>
-        <button (click)="closed.emit()" class="font-semibold">ยกเลิก</button>
+        <button type="submit" class="font-semibold text-green-600">
+          สร้าง
+        </button>
+        <button type="button" (click)="closed.emit()" class="font-semibold">
+          ยกเลิก
+        </button>
       </div>
-    </div>
+    </form>
   </div>
 </app-overlay>
