--- a/src/app/components/category-update/category-update.component.html
+++ b/src/app/components/category-update/category-update.component.html
@@ -16,6 +16,17 @@
             placeholder="ระบุชื่อหมวดหมู่"
             class="rounded border-stone-300"
           />
+          @if (name?.hasError("required") && name?.touched) {
+            <span class="text-xs text-red-500">โปรดระบุชื่อหมวดหมู่</span>
+          }
+          @if (
+            (name?.hasError("minlength") || name?.hasError("maxlength")) &&
+            name?.touched
+          ) {
+            <span class="text-xs text-red-500"
+              >ความยาวชื่อหมวดหมู่ต้องอยู่ระหว่าง 1-100 ตัวอักษร</span
+            >
+          }
         </div>
       </div>
       <div class="grid grid-cols-2 place-items-center">
