--- a/src/app/components/lesson-create/lesson-create.component.html
+++ b/src/app/components/lesson-create/lesson-create.component.html
@@ -16,6 +16,24 @@
             placeholder="ระบุหมุดบทเรียน"
             class="rounded border-stone-300"
           />
+          @if (slug?.hasError("required") && slug?.touched) {
+            <span class="text-xs text-red-500">โปรดระบุหมุดบทเรียน</span>
+          }
+          @if (
+            (slug?.hasError("minlength") || slug?.hasError("maxlength")) &&
+            slug?.touched
+          ) {
+            <span class="text-xs text-red-500"
+              >ความยาวหมุดบทเรียนต้องอยู่ระหว่าง 1-100 ตัวอักษร</span
+            >
+          }
+          @if (slug?.hasError("pattern") && slug?.touched) {
+            <span class="text-xs text-red-500"
+              >หมุดบทเรียนต้องขึ้นต้นและลงท้ายด้วยอักษรภาษาอังกฤษ
+              และต้องประกอบตัวอักษรภาษาอังกฤษพิมพ์เล็ก ตัวเลข
+              และขีดเท่านั้น</span
+            >
+          }
         </div>
         <div class="flex flex-col gap-1">
           <label class="text-sm font-semibold" for="category">หมวดหมู่</label>
@@ -36,6 +54,17 @@
             placeholder="ระบุชื่อบทเรียน"
             class="rounded border-stone-300"
           />
+          @if (title?.hasError("required") && title?.touched) {
+            <span class="text-xs text-red-500">โปรดระบุชื่อบทเรียน</span>
+          }
+          @if (
+            (title?.hasError("minlength") || title?.hasError("maxlength")) &&
+            title?.touched
+          ) {
+            <span class="text-xs text-red-500"
+              >ความยาวชื่อบทเรียนต้องอยู่ระหว่าง 1-100 ตัวอักษร</span
+            >
+          }
         </div>
       </div>
       <div class="grid grid-cols-2 place-items-center">
