--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -33,6 +33,15 @@
           >บทเรียน</a
         >
       </li>
+      <li>
+        <a
+          routerLink="/photos"
+          routerLinkActive="bg-purple-50"
+          (click)="menuPanel.down()"
+          class="block rounded-lg px-4 py-2 font-semibold"
+          >รูปภาพ</a
+        >
+      </li>
     </ul>
   </nav>
 </div>
