--- a/src/app/pages/content-editor/content-editor.page.html
+++ b/src/app/pages/content-editor/content-editor.page.html
@@ -8,7 +8,20 @@
     (click)="photoPanel.up()"
     class="fixed top-4 left-4 flex size-10 items-center justify-center rounded-lg bg-yellow-50 shadow-lg"
   >
-    P
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke-width="1.5"
+      stroke="currentColor"
+      class="size-6"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="m2.25 15.75 5.159-5.159a2.25 2.25 0 0 1 3.182 0l5.159 5.159m-1.5-1.5 1.409-1.409a2.25 2.25 0 0 1 3.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 0 0 1.5-1.5V6a1.5 1.5 0 0 0-1.5-1.5H3.75A1.5 1.5 0 0 0 2.25 6v12a1.5 1.5 0 0 0 1.5 1.5Zm10.5-11.25h.008v.008h-.008V8.25Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z"
+      />
+    </svg>
   </button>
   <div class="p-4">
     <div
@@ -22,7 +35,20 @@
   (click)="confirmPanel.up()"
   class="fixed right-4 bottom-4 flex size-10 items-center justify-center rounded-lg bg-blue-50 shadow-lg"
 >
-  S
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    fill="none"
+    viewBox="0 0 24 24"
+    stroke-width="1.5"
+    stroke="currentColor"
+    class="size-6"
+  >
+    <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+    />
+  </svg>
 </button>
 
 @if (confirmPanel.active) {
@@ -64,7 +90,20 @@
         (click)="photoPanel.down()"
         class="fixed top-4 right-4 flex size-10 items-center justify-center rounded-lg bg-red-50 shadow-lg"
       >
-        X
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M6 18 18 6M6 6l12 12"
+          />
+        </svg>
       </button>
     </div>
   </app-overlay>
