--- a/src/app/pages/content-editor/content-editor.page.html
+++ b/src/app/pages/content-editor/content-editor.page.html
@@ -1,9 +1,5 @@
-<div class="grid grid-cols-2 gap-4">
-  <textarea
-    [(ngModel)]="content"
-    (ngModelChange)="parseWithDebounce()"
-    class="scrollbar sticky top-0 block h-dvh w-full resize-none border-none px-4 py-20 ring-0"
-  ></textarea>
+<div class="grid grid-cols-1 gap-4 lg:grid-cols-2">
+  <div #editor class="h-dvh lg:sticky lg:top-0"></div>
   <button
     (click)="photoPanel.up()"
     class="fixed top-4 left-4 flex size-10 items-center justify-center rounded-lg bg-yellow-50 shadow-lg"
