--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -55,6 +55,15 @@
           >รูปภาพ</a
         >
       </li>
+      <li>
+        <a
+          role="button"
+          (click)="contentService.exportLesson()"
+          class="block rounded-lg px-4 py-2 font-semibold"
+        >
+          ส่งออกไฟล์
+        </a>
+      </li>
     </ul>
   </nav>
 </div>
